<?xml version="1.0"?>
<package format="3">
  <name>ekf</name>
  <version>0.0.1</version>
  <description>EKF package using robot_localization</description>
  <maintainer email="ericaijiang@gmail.com">Erica Jiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>imu_filter_madgwick</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
